Fix path to image of the cat which was not showing on deployed page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ targeting image & image container */
 #page-header-c {
     margin-top: 1rem;
 }
-.background-image {
+#background-image {
     background-image: url('/assets/images/sunset-chat.jpg');
     background-size: cover;
 }
